--- a/recipes/longsilog.html
+++ b/recipes/longsilog.html
@@ -7,6 +7,7 @@
     <body>
         <h1>Filipino Silog Recipes</h1>
         <img src="../photos/longsilog.jpg" alt="Picture of Longsilog">
+        <p>Fried garlic rice with eggs and longganisa.</p>
 
         <p><strong>Ingredients</strong></p>
         <ul>
