--- a/recipes/tapsilog.html
+++ b/recipes/tapsilog.html
@@ -7,6 +7,7 @@
     <body>
         <h1>Filipino Silog Recipes</h1>
         <img src="../photos/tapsilog.jpg" alt="Picture of Tapsilog">
+        <p>Fried garlic rice with eggs and beef tapa.</p>
 
         <p><strong>Ingredients</strong></p>
         <ul>
