--- a/recipes/tosilog.html
+++ b/recipes/tosilog.html
@@ -7,6 +7,7 @@
     <body>
         <h1>Filipino Silog Recipes</h1>
         <img src="../photos/tosilog.jpg" alt="Picture of Tosilog">
+        <p>Fried garlic rice with sunny side up eggs and tocino.</p>
 
         <p><strong>Ingredients</strong></p>
         <ul>
