--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Filipino Silog Recipes</title>
+        <link href="styles.css" rel="stylesheet"> 
     </head>
     <body>
         <h1>Filipino Silog Recipes</h1>
