--- a/recipes/longsilog.html
+++ b/recipes/longsilog.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Tapsilog</title>
+        <link href="../styles.css" rel="stylesheet"> 
     </head>
     <body>
         <h1>Filipino Silog Recipes</h1>
